--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,7 @@ html {
 
 /*  HEADER */
 .header {
-    background-image: url("../../resources/faq-title-bg@2x.png");
+    background-image: url("../assets/images/faq-title-bg@2x.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -225,7 +225,7 @@ html {
 @media only screen and (min-width: 640px) {
 
     .header {
-        background-image: url("../../resources/faq-title-bg@2x-1.png");
+        background-image: url("../assets/images/faq-title-bg@2x-1.png");
         min-height: 288px;
     }
 
